--- a/app/Resources/views/cours/adminBtns.html.twig
+++ b/app/Resources/views/cours/adminBtns.html.twig
@@ -1,6 +1,6 @@
 <div class="btnActionCol col-md-1">
     <ul>
-        <li class="myBtn btnLeft">
+        <li class="myBtn btnLeft btnActivationCheck">
             {% if visible == "true" %}
                 <i class="activationBtn fa fa-check-square-o"></i>
             {% else %}
@@ -10,6 +10,6 @@
         <li class="myBtn btnMoveUp btnLeft"><i class="fa fa-arrow-up"></i></li>
         <li class="myBtn btnMoveDown btnLeft"><i class="fa fa-arrow-down"></i></li>
         <li class="myBtn btnDelete btnLeft btnDeleteElem"><i class="fa fa-trash"></i></li>
-        <li class="myBtn btnDelete btnLeft btnSupprElem"><i class="fa fa-times "></i></li>
+        <li class="myBtn btnDelete btnLeft btnSupprElem"><i class="fa fa-times"></i></li>
     </ul>
 </div>
