--- a/app/Resources/views/user/add.html.twig
+++ b/app/Resources/views/user/add.html.twig
@@ -19,6 +19,12 @@
         label{
             text-align: right;
         }
+        input[type=checkbox]{
+            margin-right: 2px;
+        }
+        input[type=checkbox]:not(:first-child){
+            margin-left: 15px;
+        }
     </style>
 
     <script>
