--- a/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
@@ -10,7 +10,7 @@
     {% endif %}
 
     <div class="form-group">
-        <label for="username">Nom d'utilisateur</label>
+        <label for="username">Email</label>
         <input class="form-control" type="text" id="username" name="_username" value="{{ last_username }}" required="required" />
     </div>
 
