--- a/app/Resources/views/cours/adminDevoir.html.twig
+++ b/app/Resources/views/cours/adminDevoir.html.twig
@@ -39,10 +39,13 @@
             <div class=" col-sm-9  col-xs-12 listeItemContained">
                 {% for keyR,valR in sujets %}
                     <div class="row" data-idFile="{{ valR.id }}">
-                        <div class="col-xs-10">
+                        <div class="col-xs-9">
                             <div class="nomAssoc inlineBtn">{{ valR.nom }}</div>
                         </div>
-                        <div class="col-xs-2 text-right">
+                        <div class="col-xs-3 text-right">
+                            <a class="myBtn btnZoom inlineBtn" href="{{ valR.url }}" target="_blank">
+                                <i class="fa fa-search"></i>
+                            </a>
                             <div class="myBtn btnDelete inlineBtn btnRemoveSujetFromDevoir">
                                 <i class="fa fa-trash"></i>
                             </div>
@@ -57,10 +60,13 @@
             <div class=" col-sm-9  col-xs-12 listeItemContained">
                 {% for keyR,valR in corrigesType %}
                     <div class="row" data-idFile="{{ valR.id }}">
-                        <div class="col-xs-10">
+                        <div class="col-xs-9">
                             <div class="nomAssoc inlineBtn">{{ valR.nom }}</div>
                         </div>
-                        <div class="col-xs-2 text-right">
+                        <div class="col-xs-3 text-right">
+                            <a class="myBtn btnZoom inlineBtn" href="{{ valR.url }}" target="_blank">
+                                <i class="fa fa-search"></i>
+                            </a>
                             <div class="myBtn btnDelete inlineBtn btnRemoveCorrigeTypeFromDevoir">
                                 <i class="fa fa-trash"></i>
                             </div>
@@ -75,7 +81,7 @@
                 <div class="LabelAdmin col-sm-3">Date de début</div>
                 <div class='col-sm-9 noPadding mb-10'  data-champName="dateDebut">
                     <div class="form-group noMargin mb-10">
-                        <div class='input-group date evtDateD' id='dateD_{{ zoneId }}_{{ devoir.id }}'>
+                        <div class='input-group date evtDateD' id='dateD_{{ zoneId }}_{{ devoir.id }}' data-date="{{ devoir.dateDebut|date('Y-m-d H:i:s') }}">
                             <input type='text' class="form-control" />
                             <span class="input-group-addon">
                                 <span class="glyphicon glyphicon-calendar"></span>
@@ -86,7 +92,7 @@
                 <div class="LabelAdmin col-sm-3">Date de fin</div>
                 <div class='col-sm-9 noPadding mb-10' data-champName="dateFin">
                     <div class="form-group noMargin">
-                        <div class='input-group date evtDateF' id='dateF_{{ zoneId }}_{{ devoir.id }}'>
+                        <div class='input-group date evtDateF' id='dateF_{{ zoneId }}_{{ devoir.id }}' data-date="{{ devoir.dateFin|date('Y-m-d H:i:s') }}">
                             <input type='text' class="form-control" />
                             <span class="input-group-addon">
                                 <span class="glyphicon glyphicon-calendar"></span>
