--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -11,7 +11,7 @@
                 {% include "FOSUserBundle:Security:login_content.html.twig" %}
 
                 <hr/>
-                <a href="#">Mot de passe oublié ?</a>
+                <a href="{{ path('fos_user_resetting_request') }}">Mot de passe oublié ?</a>
                 <br/>
                 <a href="{{ path('inscription') }}">Créer un compte</a>
             </div>
