--- a/app/Resources/views/cours/oneAdmin.html.twig
+++ b/app/Resources/views/cours/oneAdmin.html.twig
@@ -896,7 +896,7 @@
                     },
                     progressall: function (e, data) {
                         var progress = parseInt(data.loaded / data.total * 100, 10);
-                        $('#progressUpload').find('.progress-bar').css(
+                        $('#itemProgress').find('.progress-bar').css(
                                 'width',
                                 progress + '%'
                         );
@@ -1003,7 +1003,7 @@
                     },
                     progressall: function (e, data) {
                         var progress = parseInt(data.loaded / data.total * 100, 10);
-                        $('#progressUpload').find('.progress-bar').css(
+                        $('#itemProgress').find('.progress-bar').css(
                                 'width',
                                 progress + '%'
                         );
