--- a/app/Resources/views/cours/one.html.twig
+++ b/app/Resources/views/cours/one.html.twig
@@ -155,7 +155,7 @@
                             },
                             progressall: function (e, data) {
                                 var progress = parseInt(data.loaded / data.total * 100, 10);
-                                $('#progressUpload').find('.progress-bar').css(
+                                $('#itemProgress').find('.progress-bar').css(
                                         'width',
                                         progress + '%'
                                 );
